[gd_scene load_steps=6 format=2]

[ext_resource path="res://fundo.jpg" type="Texture" id=1]
[ext_resource path="res://atividade.gd" type="Script" id=2]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://voltar.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
extra_spacing_space = -6
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 512, 308 )
scale = Vector2( 0.290482, 0.328625 )
texture = ExtResource( 1 )

[node name="ListaPronta" type="Button" parent="."]
margin_left = 70.0
margin_top = 50.0
margin_right = 239.0
margin_bottom = 120.0

[node name="listapronta" type="Label" parent="ListaPronta"]
margin_left = 10.0
margin_top = 19.0
margin_right = 170.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "LISTA
PRONTA"
align = 1

[node name="InsiraItem" type="Button" parent="."]
margin_left = 70.0
margin_top = 193.0
margin_right = 239.0
margin_bottom = 263.0

[node name="insiraitem" type="Label" parent="InsiraItem"]
margin_left = 10.0
margin_top = 22.0
margin_right = 170.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "INSIRIR 
ITEM"
align = 1

[node name="InsiraNum" type="Button" parent="InsiraItem"]
margin_top = 140.0
margin_right = 169.0
margin_bottom = 210.0

[node name="insiranum" type="Label" parent="InsiraItem/InsiraNum"]
margin_left = 10.0
margin_top = 23.0
margin_right = 170.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "INSIRIR 
NÚMERO"
align = 1

[node name="Mensagem" type="Button" parent="InsiraItem"]
margin_top = 287.0
margin_right = 169.0
margin_bottom = 357.0

[node name="mensagem" type="Label" parent="InsiraItem/Mensagem"]
margin_left = 10.0
margin_top = 22.0
margin_right = 170.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "MENSAGEM
ESPECIAL"
align = 1

[node name="Voltar" type="Button" parent="."]
margin_left = 783.0
margin_top = 432.0
margin_right = 952.0
margin_bottom = 586.0

[node name="voltar" type="Sprite" parent="Voltar"]
modulate = Color( 0.184314, 0.0509804, 0.341176, 0.564706 )
position = Vector2( 84.5, 76.5 )
scale = Vector2( 0.309524, 0.405836 )
texture = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 321.0
margin_top = 50.0
margin_right = 703.0
margin_bottom = 558.0
color = Color( 0.184314, 0.0509804, 0.341176, 1 )

[node name="Saída" type="Label" parent="ColorRect"]
margin_left = 16.0
margin_top = 26.0
margin_right = 366.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 746.0
margin_top = 86.0
margin_right = 980.0
margin_bottom = 209.0
color = Color( 0.184314, 0.0509804, 0.341176, 1 )

[node name="inseriritem" type="Label" parent="ColorRect2"]
margin_left = 33.0
margin_top = -38.0
margin_right = 193.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "Insira um
Item"
align = 1

[node name="texto" type="LineEdit" parent="ColorRect2"]
margin_left = 6.0
margin_top = 2.0
margin_right = 230.0
margin_bottom = 119.0

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 746.0
margin_top = 273.0
margin_right = 980.0
margin_bottom = 396.0
color = Color( 0.184314, 0.0509804, 0.341176, 1 )

[node name="inserirnum" type="Label" parent="ColorRect3"]
margin_left = 33.0
margin_top = -42.0
margin_right = 193.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 1 )
text = "Insira um 
Número"
align = 1

[node name="número" type="LineEdit" parent="ColorRect3"]
margin_left = 4.0
margin_top = 5.0
margin_right = 231.0
margin_bottom = 117.0

[connection signal="pressed" from="ListaPronta" to="." method="_on_ListaPronta_pressed"]
[connection signal="pressed" from="InsiraItem" to="." method="_on_InsiraItem_pressed"]
[connection signal="pressed" from="InsiraItem/InsiraNum" to="." method="_on_InsiraNum_pressed"]
[connection signal="pressed" from="InsiraItem/Mensagem" to="." method="_on_Mensagem_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
